--- a/src/app/components/main-menu/main-menu.component.html
+++ b/src/app/components/main-menu/main-menu.component.html
@@ -1,5 +1,5 @@
 <div id="main-container">
-    
+
     <div id="menu-container">
 
         <div id="menu-title-container">
@@ -8,11 +8,17 @@
 
         <div id="menu-button-container">
 
-            <button mat-raised-button class="menu-button" color="accent" (click)="singlePlayerGame()">Single Player</button>
+            <button mat-raised-button class="menu-button" color="accent" (click)="singlePlayerGame()">
+                Single Player
+            </button>
 
-            <button mat-raised-button class="menu-button" color="accent">Multi Player</button>
+            <button mat-raised-button class="menu-button" color="accent" (click)="multiPlayerGame()">
+                Multi Player
+            </button>
 
-            <button mat-raised-button class="menu-button" color="accent">Settings</button>
+            <button mat-raised-button class="menu-button" color="accent" (click)="settings()">
+                Settings
+            </button>
 
         </div>
     </div>
