Conditional styling for message-bubble based on message sender type as well.
now adding "sender" class if both id and playerType of message player matches with id and playerType of currentPlayer.

--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -5,7 +5,8 @@
         <!--  <mat-list role="list" id="message-list"> -->
         <div id="message-container">
             @for (message of gameChat; track $index) {
-            <div class="message-bubble" [ngClass]="{'sender': message.player.id === currentPlayer?.id}">
+            <div class="message-bubble" [ngClass]="{'sender': message.player.id === currentPlayer?.id && 
+                message.player.playerType === currentPlayer?.playerType}">
                 <div class="player-name">{{message.player.name}}</div>
                 <div class="message">{{message.message}}</div>
             </div>
