--- a/src/app/components/game-screen/game-screen.component.css
+++ b/src/app/components/game-screen/game-screen.component.css
@@ -32,7 +32,7 @@
     max-height: 100%;
 }
 
-#game-info-contatiner {
+#game-info-container {
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -41,19 +41,48 @@
     margin-left: 0.5em;
 }
 
-#game-info-title{
+#game-info-title {
     display: flex;
     justify-content: center;
     margin-left: 0.2em;
+    margin-top: 0.2em;
 }
 
-#game-info-body{
-    display: flex;
-    flex-direction: row;
+#game-info-title-game-level {
     margin-left: 1em;
 }
 
-#main-game-board-container {
+#game-info-title-time-container {
+    margin-left: 3em;
+}
+
+#game-info-body {
+    display: flex;
+    flex-direction: column;
+    margin-left: 1em;
+}
+
+#players-contatiner {
+    display: flex;
+    width: 80%;
+    overflow-x: auto;
+}
+
+.player-info-box {
+    background-color: rgb(122, 137, 248);
+    padding: 0.1em;
+    margin: 0 0.3em;
+}
+
+.host-player {
+    background-color: rgb(149, 64, 219);
+}
+
+.current-player {
+    background-color: rgb(5, 219, 2);
+}
+
+#main-game-screen-container {
     flex: 5;
     width: 100%;
     display: flex;
@@ -67,17 +96,32 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;
     box-sizing: border-box;
     padding: 0.5em;
 }
 
-#game-board-container {
+.board-control-button {
+    margin: 0.3em 0;
+    width: 100%;
+}
+
+#game-screen-container {
     display: flex;
     flex: 6;
     height: 100%;
     position: relative;
     align-items: center;
+    justify-content: center;
+}
+
+#game-screen-message-container {
+    height: 80%;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+    background-color: rgb(132, 132, 132);
 }
 
 #game-board {
@@ -89,4 +133,10 @@
     flex: 1.5;
     padding-left: 0.25em;
     max-width: 30%;
+}
+
+@media screen and (max-width: 750px) {
+    #game-board {
+        width: 100%;
+    }
 }
