--- a/src/app/components/game-screen/game-screen.component.html
+++ b/src/app/components/game-screen/game-screen.component.html
@@ -14,7 +14,7 @@
         @else{
         <div id="game-info-container">
             <div id="game-info-title">
-                
+
                 <div id="game-info-title-game-name">
                     {{game.gameName}}
                 </div>
@@ -23,8 +23,8 @@
                 </div>
                 <div id="game-info-title-time-container">
 
-                    @if(isGameStatus(gameStatusType.FINISHED)){
-                        {{gameScreenMessage}}
+                    @if(isGameSessionStatus(gameSessionStatusType.FINISHED)){
+                    {{gameScreenMessage}}
                     }
                     @else{
                         {{timeRemainingMin}} :
@@ -56,7 +56,7 @@
 
             <div id="main-game-screen-container">
                 <div id="board-control-container">
-
+                    @if(isMultiplayerGame()){
                     @if(isCurrentPlayer(game.hostPlayer)){
                     <button mat-raised-button color="accent" class="board-control-button" id="start-game-button"
                         (click)="startGame()">
@@ -73,6 +73,7 @@
                         (click)="resumeGame()">
                         Resume
                     </button>
+                    }
 
                     <button mat-raised-button color="accent" class="board-control-button" id="leave-game-button"
                         (click)="submitGame()">
@@ -86,14 +87,17 @@
                 </div>
 
                 <div id="game-screen-container">
-                    @if(isGameStatus(gameStatusType.NEW) || isGameStatus(gameStatusType.PAUSED)){
+                    @if(isGameSessionStatus(gameSessionStatusType.NEW) ||
+                    isGameSessionStatus(gameSessionStatusType.PAUSED)){
                     <div id="game-screen-message-container">
-                        {{gameScreenMessage}}
+                        <p [innerHTML]="gameScreenMessage">
+
+                        </p>
                     </div>
                     }
                     @else{
                     <app-game-board id="game-board" [initialBoard]="game.initialBoard"
-                        [currentBoard]="game.currentBoard" [solution]="game.solution"
+                        [currentBoard]="gameSession.gameBoard" [solution]="game.solution"
                         (boardUpdateEvent)="onBoardUpdateFromChild($event)">
                     </app-game-board>
                     }
