--- a/src/app/components/ui/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/components/ui/confirmation-dialog/confirmation-dialog.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>{{confirmationDialogData.title}}</h2>
-<mat-dialog-content>
-    {{confirmationDialogData.content}}
+<mat-dialog-content [innerHTML]="confirmationDialogData.content">
+
 </mat-dialog-content>
 <mat-dialog-actions>
     <button mat-raised-button color="primary" id="no-button" mat-dialog-close (click)="no()">
