feat: Add CSS styles for solution tiles in game board
- Add styles for blankSolutionTile, correctSolutionTile, and incorrectSolutionTile classes.

--- a/src/app/components/game-board/game-board.component.css
+++ b/src/app/components/game-board/game-board.component.css
@@ -7,6 +7,18 @@
   background-color: rgb(236, 255, 253);
 }
 
+.blankSolutionTile{
+  background-color: white;
+}
+
+.correctSolutionTile{
+  background-color: rgb(29, 236, 29);
+}
+
+.incorrectSolutionTile{
+  background-color: red;
+}
+
 .initialTile {
   background-color: rgb(255, 252, 223);
 }
