feat: Add solution title in game-screen-container when showSolution is true
- Added a new div with id "solution-title" inside game-screen-container when showSolution is true.

--- a/src/app/components/game-screen/game-screen.component.html
+++ b/src/app/components/game-screen/game-screen.component.html
@@ -87,6 +87,11 @@
                 </div>
 
                 <div id="game-screen-container">
+                    @if (showSolution) {
+                        <div id="solution-title">
+                            Solution
+                        </div>
+                    }
                     @if(isGameSessionStatus(gameSessionStatusType.NEW) ||
                     isGameSessionStatus(gameSessionStatusType.PAUSED)){
                     <div id="game-screen-message-container">
