--- a/src/app/components/game-screen/game-screen.component.css
+++ b/src/app/components/game-screen/game-screen.component.css
@@ -115,6 +115,11 @@
     justify-content: center;
 }
 
+#solution-title{
+    align-items: center;
+    font-size: 1.5em;
+}
+
 #game-screen-message-container {
     height: 80%;
     width: 80%;
