--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,11 @@
 <div id="container">
 
+    <div id="app-title-container">
+        <p id="app-title">
+            Sudoku Multiplayer
+        </p>
+    </div>
+
     <div id="wrapper">
 
         <div id="login-title-container">
@@ -38,7 +44,9 @@
                     <p id="remember-me">remember me.</p>
                 </mat-checkbox>
 
-                <button mat-raised-button color="primary" [disabled]="loginForm.invalid" type="submit">Log in</button>
+                <button mat-raised-button color="primary" [disabled]="loginForm.invalid" type="submit">
+                    Log in
+                </button>
 
             </form>
 
@@ -67,7 +75,7 @@
         </div>
 
         <div id="signup-container">
-            <p>Don't have an account?</p>
+            <p id="no-account">Don't have an account?</p>
             <button mat-raised-button color="primary" [routerLink]="['/signup']">Signup</button>
         </div>
     </div>
