feat: Add application title

--- a/src/app/components/main-menu/main-menu.component.html
+++ b/src/app/components/main-menu/main-menu.component.html
@@ -1,5 +1,11 @@
 <div id="main-container">
 
+    <div id="app-title-container">
+        <p id="app-title">
+            Sudoku Multiplayer
+        </p>
+    </div>
+
     <div id="menu-container">
 
         <div id="menu-title-container">
