--- a/src/app/components/main-menu/main-menu.component.css
+++ b/src/app/components/main-menu/main-menu.component.css
@@ -1,11 +1,23 @@
 #main-container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100%;
     width: 100%;
     background-color: #5c5a46;
-} 
+}
+
+#app-title-container {
+    display: flex;
+}
+
+#app-title {
+    font-size: 2.5em;
+    margin-top: 0;
+    margin-bottom: 0.5em;
+    color: rgb(144, 158, 20);
+}
 
 #menu-container {
     display: flex;
