fix: Disable all input fields when showing the solution
- Updated the solution grid to disable all input fields regardless of initial tile state.
- Ensured the solution grid tiles cannot be edited by the user.

--- a/src/app/components/game-board/game-board.component.html
+++ b/src/app/components/game-board/game-board.component.html
@@ -10,7 +10,7 @@
                 'initialTile': initialBoard[i][j] !== 0
               }"
               [value]="solution[i][j]" 
-              [disabled]="initialBoard[i][j] !== 0"
+              [disabled]="true"
             >
           </mat-grid-tile>
         }
