feat: Add About Button to Login Page

--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -105,6 +105,12 @@ button:hover {
     color: red;
 }
 
+#about-button{
+    position: absolute;
+    right: 4em;
+    bottom: 2.8em;
+}
+
 @media screen and (max-width: 480px) {
     #login-container {
         flex-direction: column;
