--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -79,4 +79,9 @@
             <button mat-raised-button color="primary" [routerLink]="['/signup']">Signup</button>
         </div>
     </div>
+
+    <button mat-raised-button id="about-button" color="primary" (click)="about()">
+        About
+    </button>
+
 </div>
