--- a/src/app/components/main-menu/main-menu.component.html
+++ b/src/app/components/main-menu/main-menu.component.html
@@ -9,7 +9,9 @@
     <div id="menu-container">
 
         <div id="menu-title-container">
-            <p id="menu-title">Main Menu</p>
+            <p id="menu-title">
+                Main Menu
+            </p>
         </div>
 
         <div id="menu-button-container">
@@ -24,6 +26,10 @@
 
             <button mat-raised-button class="menu-button" color="accent" (click)="settings()">
                 Settings
+            </button>
+
+            <button mat-raised-button class="menu-button" color="accent" (click)="about()">
+                About
             </button>
 
         </div>
