feat: Add settings button to game screen UI
- Introduced a settings button in the game screen.
- Adjusted layout to include settings tool.

--- a/src/app/components/game-screen/game-screen.component.html
+++ b/src/app/components/game-screen/game-screen.component.html
@@ -52,6 +52,12 @@
                         }
                     </div>
                 </div>
+
+                <div id="game-screen-tools">
+                    <button mat-icon-button color="primary" id="game-screen-settings-button" (click)="openGameScreenSettingsDialog()">
+                        <mat-icon>settings</mat-icon>
+                      </button>
+                </div>
             </div>
 
             <div id="main-game-screen-container">
