--- a/src/app/components/game-screen/game-screen.component.css
+++ b/src/app/components/game-screen/game-screen.component.css
@@ -36,7 +36,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 90%;
     background-color: rgba(147, 144, 115);
     margin-left: 0.5em;
 }
@@ -80,6 +80,12 @@
 
 .current-player {
     background-color: rgb(5, 219, 2);
+}
+
+#game-screen-tools {
+    display: flex;
+    justify-content: flex-end;
+    padding: 0.2em;
 }
 
 #main-game-screen-container {
