feat: Add conditional rendering for board updates and game chat based on game screen settings

--- a/src/app/components/game-screen/game-screen.component.html
+++ b/src/app/components/game-screen/game-screen.component.html
@@ -1,8 +1,10 @@
 <div id="container">
 
-    <div id="board-updates-container">
-        <app-board-updates #boardUpdatesComponent [boardUpdates]="boardUpdates"></app-board-updates>
-    </div>
+    @if (gameScreenSettings.showBoardUpdates) {
+        <div id="board-updates-container">
+            <app-board-updates #boardUpdatesComponent [boardUpdates]="boardUpdates"></app-board-updates>
+        </div>
+    }
 
     <div id="game-container">
         @if(isLoading){
@@ -121,7 +123,9 @@
 
         </div>
 
-        <div id="chat-container">
-            <app-chat #chat [gameChat]="gameChat" (messageEvent)="onPlayerMessage($event)"></app-chat>
-        </div>
+        @if(gameScreenSettings.showGameChat){
+            <div id="chat-container">
+                <app-chat #chat [gameChat]="gameChat" (messageEvent)="onPlayerMessage($event)"></app-chat>
+            </div>
+        }
     </div>
