--- a/src/app/components/game-board/game-board.component.css
+++ b/src/app/components/game-board/game-board.component.css
@@ -5,22 +5,31 @@
   text-align: center;
   font-size: calc(1vw + 1vh);
   background-color: rgb(236, 255, 253);
+  border-color: rgb(209, 209, 209);
 }
 
-.blankSolutionTile{
+.blankSolutionTile {
   background-color: white;
 }
 
-.correctSolutionTile{
+.correctSolutionTile {
   background-color: rgb(29, 236, 29);
 }
 
-.incorrectSolutionTile{
+.incorrectSolutionTile {
   background-color: red;
 }
 
 .initialTile {
   background-color: rgb(255, 252, 223);
+}
+
+.border-right {
+  border-right: 0.3em solid black;
+}
+
+.border-down {
+  border-bottom: 0.3em solid black;
 }
 
 input[type=number]::-webkit-inner-spin-button,
