--- a/src/app/components/game-screen/game-screen.component.css
+++ b/src/app/components/game-screen/game-screen.component.css
@@ -123,7 +123,7 @@
 
 #solution-title {
     align-items: center;
-    font-size: 2.5em;
+    font-size: 2em;
 }
 
 #game-screen-message-container {
@@ -137,7 +137,7 @@
 }
 
 #game-board {
-    width: 60%;
+    width: 20em;
     border: 0.2em solid rgb(174, 174, 0);
 }
 
