feat: disable Single Player button and add "Coming Soon" label
- Disabled Single Player button and added "Coming Soon" text.
- Updated HTML to include the new text and disable attribute.
- Added CSS styles for the "Coming Soon" text.

--- a/src/app/components/main-menu/main-menu.component.css
+++ b/src/app/components/main-menu/main-menu.component.css
@@ -55,8 +55,14 @@
     text-align: center;
 }
 
-#menu-title{
+#menu-title {
     font-size: 2em;
     padding: 0;
     margin: 0;
+}
+
+#coming-soon-text {
+    color: rgb(227, 0, 0);
+    text-decoration: underline;
+    pointer-events: none;
 }
