--- a/src/app/components/game-screen/game-screen.component.css
+++ b/src/app/components/game-screen/game-screen.component.css
@@ -43,17 +43,17 @@
 
 #game-info-title {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     margin-left: 0.2em;
     margin-top: 0.2em;
 }
 
-#game-info-title-game-level {
-    margin-left: 1em;
+#game-info-title-game-name {
+    max-width: 40%;
 }
 
-#game-info-title-time-container {
-    margin-left: 3em;
+#game-info-title-game-level {
+    margin-left: 1em;
 }
 
 #game-info-body {
